# rp2040-ili9341-infones

./: .gitignore  CMakeLists.txt  main.cpp  menu.cpp
.github/workflows/: cmake-single-platform.yml
software/infones/: CMakeLists.txt  InfoNES_Mapper.cpp  main.cpp  menu.cpp
